tests/error/hash_if.c
// fail "Expected an argument after '#if'."
#if 
